# shapeformer-project

./: .dockerignore  .gitignore  pyproject.toml
Models/: shapeformer.py
