[project]
name = "shapeformer-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sktime>=0.39.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
